logs/run_20250309_144105.log
[2025-03-09 14:41:05] AI Code Bot started working on project: Automation Tools
[2025-03-09 14:41:05] Found 5 existing Python files in project.
[2025-03-09 14:41:05] Generating AI-driven tasks...
[2025-03-09 14:41:08] Generated 4 executable tasks.
[2025-03-09 14:41:08] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_144108.py
[2025-03-09 14:41:08] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_144108.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_1_20250309_144108.py", line 1
    Task 1:
         ^
SyntaxError: invalid syntax

[2025-03-09 14:41:08] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_2_20250309_144108.py
[2025-03-09 14:41:08] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_2_20250309_144108.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_2_20250309_144108.py", line 13
    ```
    ^
SyntaxError: invalid syntax

[2025-03-09 14:41:08] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_3_20250309_144108.py
[2025-03-09 14:41:08] Error executing script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_3_20250309_144108.py:
  File "C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_3_20250309_144108.py", line 11
    ```
    ^
SyntaxError: invalid syntax

[2025-03-09 14:41:08] Created script: C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_4_20250309_144108.py
[2025-03-09 14:41:08] Executed script C:\Users\young\source\repos\JazzPiece\auto-code-bot\ai_work\Automation_Tools\task_4_20250309_144108.py successfully:
[9, 6, 5, 5, 5, 4, 3, 3, 2, 1, 1]

[2025-03-09 14:41:08] AI Code Bot execution completed successfully.
